<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ui.libro.UpdateLibroFragment" >

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_autor"
        android:inputType="textPersonName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <EditText
            android:id="@+id/etDescrip"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoText="false"
            android:ems="10"
            android:hint="@string/msg_descrip"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="5sp">

            <Button
                android:id="@+id/btUpdate"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:padding="10sp"
                android:text="@string/bt_update_libro" />

            <Button
                android:id="@+id/btDelete"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:padding="10sp"
                android:text="@string/bt_delete_libro" />
        </TableRow>

    </LinearLayout>

</LinearLayout>